@@ -19,6 +19,76 @@ Rubicon Systems is a **Travel Package Management System** designed to help admin
 
 ---
 
+## Project Structure
+
+```
+travelGo/
+├── src/
+│   ├── main/
+│   │   ├── java/
+│   │   │   └── com/example/exp/travelgogui/
+│   │   │       ├── main/
+│   │   │       │   ├── MainApplication.java        ← JavaFX App Launcher
+│   │   │       │   ├── MainController.java         ← Screen flow logic
+│   │   │       │   ├── MainModel.java              ← App-wide state
+│   │   │       │   └── MainViewBuilder.java        ← Root layout (Login ↔ DB)
+│   │   │       │
+│   │   │       ├── login_screen/
+│   │   │       │   ├── functionalInterface.java    ← Callback for login
+│   │   │       │   ├── LoginController.java        ← Binds view + logic
+│   │   │       │   ├── LoginInteractor.java        ← Runs login task
+│   │   │       │   ├── LoginModel.java             ← Stores login state
+│   │   │       │   └── LoginViewBuilder.java       ← Login screen GUI
+│   │   │       │
+│   │   │       ├── travel_database_screen/
+│   │   │       │   ├── components/
+│   │   │       │   │   ├── TravelDatabaseController.java  ← Handles actions
+│   │   │       │   │   ├── TravelDatabaseInteractor.java  ← Runs save/load tasks
+│   │   │       │   │   ├── TravelDatabaseModel.java       ← Travel DB state
+│   │   │       │   │   ├── TravelDatabaseViewBuilder.java ← GUI: filters, lists, buttons
+│   │   │       │   │   └── TravelPackageDetailView.java   ← Popup window for package info
+│   │   │       │   └── backend/
+│   │   │       │       ├── TravelDatabase.java      ← XML I/O logic
+│   │   │       │       ├── TravelPackage.java       ← Travel package model
+│   │   │       │       └── TravelPackageList.java   ← Wrapper for XML serialization
+│   │   │       └── TravelPackageDialogs.java        ← Add/Edit Dialog window
+│   │   └── resources/
+│   │       └── images/                              ← Travel images, default.jpg, icons
+│   │
+│   └── test/
+│       └── java/
+│           ├── unit/
+│           │   ├── AddTravelPackageTest.java
+│           │   ├── FilterContinentTest.java
+│           │   ├── FilterPriceTest.java
+│           │   ├── FilterStockSizeTest.java
+│           │   ├── LoginInteractorTest.java        
+│           │   └── TravelPackageTest.java
+│           │
+│           ├── integration/
+│           │   ├── DatabaseQueryTest.java
+│           │   ├── FrontendAPITest.java
+│           │   ├── FrontendListDisplayTest.java
+│           │   └── TravelDatabaseIntegrationTest.java
+│           │
+│           ├── system/
+│           │   ├── AdminAddEditPackageTest.java
+│           │   ├── AdminDeletePackageTest.java
+│           │   ├── AdminFilterAndSelectTest.java
+│           │   └── TravelAppSystemTest.java
+│           │
+│           └── translucent/
+│               ├── DuplicatePackageTest.java
+│               ├── FileCleanupTest.java
+│               └── MemoryManagementTest.java
+│
+├── pom.xml                    ← Maven configuration (JavaFX + Jackson + TestFX)
+├── README.md                  ← Full documentation, setup, structure, contact
+└── travel_packages.xml        ← Saved travel package data (if created at runtime)
+```
+
+---
+
 ## 🧭 **How to Use**
 1. **Add Travel Packages**: Input essential details like title, description, price, and stock.
 2. **Modify Stock**: Adjust stock quantities as needed for each package.
@@ -41,11 +111,51 @@ Rubicon Systems provides a pre-built executable for easy setup, no compiling req
    
 ---
 
+---
+
+## Testing Instructions
+
+### Unit & System Test Execution
+
+```bash
+mvn test
+```
+
+Make sure you run it with:
+
+```bash
+--add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+```
+
+This is already configured in the `<argLine>` of the `maven-surefire-plugin`.
+
+---
+
 ## ⚙️ **Project Requirements**
 - **Primary Language**: Java
 - **Data Storage**: CSV Files
 - **Version Control**: Git + GitHub
 - **Project Management**: GitHub Project Board
+
+---
+
+---
+
+## Developer Notes
+
+- Admin username + passwords are stored in `login_credentials.xml`, which must follow:
+  ```bash
+  <LoginCredentials>
+    <username>AdminUser</username>
+    <password>AdminUser123</password>
+  </LoginCredentials>
+  ```
+- Travel packages are stored in `travel_packages.xml`
+- Images are stored in the `src/main/resources/images/` directory
+- Travel packages are represented using `TravelPackage` and grouped in `TravelPackageList`
+- Filters & sorts are applied dynamically via dropdowns in the UI
+- Double-clicking a package opens a detailed popup view
+- Any missing image paths fallback to the default image `default.jpg`
 
 ---
 
@@ -72,12 +182,16 @@ Rubicon Systems provides a pre-built executable for easy setup, no compiling req
 
 ---
 
-## 🛡️ **Team Members**
-- **Project Manager**: Mila Launen
-- **Technical Manager**: Kendra Peace
-- **Front-End Lead**: Keifer Young
-- **Back-End Lead**: Klein Cafa
-- **Software Quality Lead**: Gina Suliman
+## 🛡️ Contact
+For questions or suggestions, feel free to reach out to us:
+
+* **Project Team**:
+  * **Project Manager:** Mila Launen mila.launen@ontariotechu.net
+  * **Technical Manager:** Kendra Peace kendra.peace@ontariotechu.net
+  * **Front-End Lead:** Keifer Young keifer.young@ontariotechu.net
+  * **Back-End Lead:** Klein Cafa kleinlester.cafa@ontariotechu.net
+  * **Software Quality lead:** Gina Suliman gina.suliman@ontariotechu.net
+  * **Developers:** All
 
 ---
 
